[gd_scene load_steps=4 format=3 uid="uid://cdrjiwxwrd56y"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_pwdey"]
[ext_resource type="PackedScene" uid="uid://be4bn0seqwei3" path="res://scenes/player.tscn" id="2_a1tjw"]
[ext_resource type="PackedScene" uid="uid://d2d81msaxruyw" path="res://scenes/environment.tscn" id="3_eelwx"]

[node name="World" type="Node2D"]
script = ExtResource("1_pwdey")

[node name="Player" parent="." instance=ExtResource("2_a1tjw")]

[node name="Environment" parent="." instance=ExtResource("3_eelwx")]

[node name="Score" type="Label" parent="."]
offset_left = 8.0
offset_right = 208.0
offset_bottom = 26.0
text = "Score: "

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
